@@ -19,13 +19,11 @@
 
 package org.elasticsearch.common.xcontent;
 
-import org.elasticsearch.common.collect.Tuple;
 import org.elasticsearch.common.xcontent.cbor.CborXContent;
 import org.elasticsearch.common.xcontent.json.JsonXContent;
 import org.elasticsearch.common.xcontent.smile.SmileXContent;
 import org.elasticsearch.common.xcontent.yaml.YamlXContent;
 
-import java.util.Collections;
 import java.util.Map;
 import java.util.Set;
 
@@ -49,7 +47,7 @@ public enum XContentType implements MediaType {
         }
 
         @Override
-        public String formatPathParameter() {
+        public String queryParameter() {
             return "json";
         }
 
@@ -59,15 +57,17 @@ public enum XContentType implements MediaType {
         }
 
         @Override
-        public Set<Tuple<String, Map<String, String>>> mediaTypeMappings() {
+        public Set<HeaderValue> headerValues() {
             return Set.of(
-                Tuple.tuple("application/json", Map.of("charset", "UTF-8")),
-                Tuple.tuple("application/x-ndjson", Map.of("charset", "UTF-8")),
-                Tuple.tuple("application/*", Collections.emptyMap()));
+                new HeaderValue("application/json"),
+                new HeaderValue("application/x-ndjson"),
+                new HeaderValue("application/*"),
+                new HeaderValue(VENDOR_APPLICATION_PREFIX + "json",
+                    Map.of(COMPATIBLE_WITH_PARAMETER_NAME, VERSION_PATTERN)),
+                new HeaderValue(VENDOR_APPLICATION_PREFIX + "x-ndjson",
+                    Map.of(COMPATIBLE_WITH_PARAMETER_NAME, VERSION_PATTERN)));
         }
     },
-
-
     /**
      * The jackson based smile binary format. Fast and compact binary format.
      */
@@ -78,7 +78,7 @@ public enum XContentType implements MediaType {
         }
 
         @Override
-        public String formatPathParameter() {
+        public String queryParameter() {
             return "smile";
         }
 
@@ -88,9 +88,11 @@ public enum XContentType implements MediaType {
         }
 
         @Override
-        public Set<Tuple<String, Map<String, String>>> mediaTypeMappings() {
+        public Set<HeaderValue> headerValues() {
             return Set.of(
-                Tuple.tuple("application/smile", Map.of("charset", "UTF-8")));
+                new HeaderValue("application/smile"),
+                new HeaderValue(VENDOR_APPLICATION_PREFIX + "smile",
+                    Map.of(COMPATIBLE_WITH_PARAMETER_NAME, VERSION_PATTERN)));
         }
     },
     /**
@@ -103,7 +105,7 @@ public enum XContentType implements MediaType {
         }
 
         @Override
-        public String formatPathParameter() {
+        public String queryParameter() {
             return "yaml";
         }
 
@@ -113,9 +115,11 @@ public enum XContentType implements MediaType {
         }
 
         @Override
-        public Set<Tuple<String, Map<String, String>>> mediaTypeMappings() {
+        public Set<HeaderValue> headerValues() {
             return Set.of(
-                Tuple.tuple("application/yaml", Map.of("charset", "UTF-8")));
+                new HeaderValue("application/yaml"),
+                new HeaderValue(VENDOR_APPLICATION_PREFIX + "yaml",
+                    Map.of(COMPATIBLE_WITH_PARAMETER_NAME, VERSION_PATTERN)));
         }
     },
     /**
@@ -128,7 +132,7 @@ public enum XContentType implements MediaType {
         }
 
         @Override
-        public String formatPathParameter() {
+        public String queryParameter() {
             return "cbor";
         }
 
@@ -138,64 +142,17 @@ public enum XContentType implements MediaType {
         }
 
         @Override
-        public Set<Tuple<String, Map<String, String>>> mediaTypeMappings() {
+        public Set<HeaderValue> headerValues() {
             return Set.of(
-                Tuple.tuple("application/cbor", Map.of("charset", "UTF-8")));
-        }
-    },
-    VND_JSON(4) {
-        @Override
-        public String mediaTypeWithoutParameters() {
-            return "application/vnd.elasticsearch+json";
-        }
-
-        @Override
-        public String formatPathParameter() {
-            return "json";
-        }
-
-        @Override
-        public XContent xContent() {
-            return JsonXContent.jsonXContent;
-        }
-
-        @Override
-        public Set<Tuple<String, Map<String, String>>> mediaTypeMappings() {
-            return Set.of(
-                Tuple.tuple("application/vnd.elasticsearch+json",
-                    Map.of(COMPATIBLE_WITH_PARAMETER_NAME, VERSION_PATTERN, "charset", "UTF-8")),
-                Tuple.tuple("application/vnd.elasticsearch+x-ndjson",
-                    Map.of(COMPATIBLE_WITH_PARAMETER_NAME, VERSION_PATTERN, "charset", "UTF-8")));
-        }
-    },
-    VND_YAML(5) {
-        @Override
-        public String mediaTypeWithoutParameters() {
-            return "application/yaml";
-        }
-
-        @Override
-        public String formatPathParameter() {
-            return "yaml";
-        }
-
-        @Override
-        public XContent xContent() {
-            return YamlXContent.yamlXContent;
-        }
-
-        @Override
-        public Set<Tuple<String, Map<String, String>>> mediaTypeMappings() {
-            return Set.of(
-                Tuple.tuple("application/vnd.elasticsearch+yaml",
-                    Map.of(COMPATIBLE_WITH_PARAMETER_NAME, VERSION_PATTERN, "charset", "UTF-8")));
+                new HeaderValue("application/cbor"),
+                new HeaderValue(VENDOR_APPLICATION_PREFIX + "cbor",
+                    Map.of(COMPATIBLE_WITH_PARAMETER_NAME, VERSION_PATTERN)));
         }
     };
 
-
-
     public static final MediaTypeRegistry<XContentType> MEDIA_TYPE_REGISTRY = new MediaTypeRegistry<XContentType>()
         .register(XContentType.values());
+    public static final String VENDOR_APPLICATION_PREFIX = "application/vnd.elasticsearch+";
 
     /**
      * Accepts a format string, which is most of the time is equivalent to MediaType's subtype i.e. <code>application/<b>json</b></code>
@@ -204,7 +161,7 @@ public enum XContentType implements MediaType {
      * This method will return {@code null} if no match is found
      */
     public static XContentType fromFormat(String format) {
-        return MEDIA_TYPE_REGISTRY.formatToMediaType(format);
+        return MEDIA_TYPE_REGISTRY.queryParamToMediaType(format);
     }
 
     /**
@@ -228,6 +185,17 @@ public enum XContentType implements MediaType {
         this.index = index;
     }
 
+    public static Byte parseVersion(String mediaType) {
+        ParsedMediaType parsedMediaType = ParsedMediaType.parseMediaType(mediaType);
+        if (parsedMediaType != null) {
+            String version = parsedMediaType
+                .getParameters()
+                .get(COMPATIBLE_WITH_PARAMETER_NAME);
+            return version != null ? Byte.parseByte(version) : null;
+        }
+        return null;
+    }
+
     public int index() {
         return index;
     }
@@ -236,10 +204,8 @@ public enum XContentType implements MediaType {
         return mediaTypeWithoutParameters();
     }
 
-
     public abstract XContent xContent();
 
     public abstract String mediaTypeWithoutParameters();
-
 
 }
